# perl-upload-cgi

./: .gitignore  ChangeLog  Makefile  Makefile.am  README-SETUP.md  README.md  TODO.md  bootstrap  build  configure.ac  docker-compose.yml  perlcriticrc  requirements  requirements.json  requirements.txt
autotools/: ads_PERL_MODULE.m4  am_perlcritic_mode.m4  apache_config.m4  ax_requirements_check.m4
config/: Makefile.am  apache2-upload-progress-redis.conf  apache2-upload-progress.json.in  inotify.service.in  perl-upload-cgi.conf.in  upload.cfg.in  upload.json  upload.json.in
docker/: Dockerfile  Makefile.am  docker-compose.yaml.in  httpd.conf.in
includes/: apache-directories.inc  directories.inc  perl-bin.inc  perl-build.inc  perl-cgi-bin.inc  perl-modules.inc  perlcritic.inc
resources/: Makefile.am
resources/templates/: config-form-redis.tt  config-form-session.tt  config-form-upload.tt  config-form.tt  save-cancel.tt  spinner.tt  toast.tt  upload-form.tt
src/main/: Makefile.am
src/main/css/: Makefile.am  config.css
src/main/images/: Makefile.am
src/main/javascript/: Makefile.am  config.js  upload.js
src/main/perl/: Makefile.am
src/main/perl/cgi-bin/: Makefile.am  upload.pl  upload.pl.in
src/main/perl/lib/: Makefile.am  README.md
src/main/perl/lib/Apache/Bootstrap/: Upload.pm.in
src/main/perl/lib/Apache2/Upload/: Progress.pm.in
src/main/perl/lib/Apache2/Upload/Progress/: Constants.pm.in  Redis.pm.in
src/main/perl/lib/Workflow/S3/: Uploader.pm.in
src/main/perl/t/: 00-progress.t
